--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,39 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-
-    <!-- The JERSEY REST application support is initialized here.  -->
-    <filter>
-        <filter-name>ApiFilter</filter-name>
-        <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
-
-        <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>
-                api
-            </param-value>
-        </init-param>
-
-        <init-param>
-            <param-name>jersey.config.server.provider.classnames</param-name>
-            <param-value>
-                org.glassfish.jersey.server.spring.scope.RequestContextFilter,
-                org.glassfish.jersey.jackson.JacksonFeature
-            </param-value>
-        </init-param>
-
-    </filter>
-
-    <filter-mapping>
-        <filter-name>ApiFilter</filter-name>
-        <url-pattern>/api/*</url-pattern>
-    </filter-mapping>
-
-	<error-page>
-		<error-code>404</error-code>
-		<location>/index.html</location>
-	</error-page>
-
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
+    <!-- any unknown requests will be sent to the client application in the browser -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/index.html</location>
+    </error-page>
 </web-app>
